<resources>
    <string name="app_name">Super Project</string>
    <string name="title_activity_basic_screen">BasicScreen</string>
    <string name="title_activity_main_screen">MainScreen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Settings Strings -->
    <string name="settings_online_mode">Online Mode</string>
    <string name="settings_save_btn">Save Settings</string>

    <!-- MainScreen Strings -->
    <string name="main_light_text_view">Light: %1$f</string>
    <string name="main_proximity_text_view">Proximity: %1$d</string>
    <string name="settings_light_safety">Light Safety</string>
    <string name="settings_progress_static">Progress 0/</string>
    <string name="settings_seek_start">0</string>
    <string name="settings_prox_safety">Proximity Safety</string>


    <!-- Navigation Bar Strings -->
    <string name="settings_item">Settings</string>
    <string name="exit_item">Exit</string>
    <string name="title_activity_online_mode">OnlineMode</string>
</resources>
