<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project.dilocossuperproject.SettingsActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:text="@string/settings_light_safety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/proximity_linear"
        android:layout_centerHorizontal="true"
        android:text="@string/settings_progress_static"
        android:id="@+id/progress_tv"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:id="@+id/light_set"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/proximity_linear"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/settings_seek_start"/>

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="8"
            android:layout_marginTop="33dp"
            android:id="@+id/proximity_set" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:id="@+id/seek_max_range"/>
    </LinearLayout>

    <TextView
        android:text="@string/settings_prox_safety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/textView2"
        android:layout_below="@+id/light_set"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/save_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:id="@+id/freq_set" />

    <Button
        android:text="@string/settings_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_button"
        android:layout_marginBottom="67dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:background="@color/colorPrimaryDark"/>

    <TextView
        android:text="@string/settings_sensor_freq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/save_button"
        android:layout_alignStart="@+id/save_button" />

</RelativeLayout>
